--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "qrcode.react": "^1.0.0",
+    "react-qr-code": "^2.0.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1"
   },
@@ -20,5 +20,9 @@
     "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
+
